--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,83 @@
 /*
     Styles
+*/ 
+table,
+ul,
+li,
+div,
+section,
+input,
+textarea {
+    -webkit-appearance: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+
+
+.page-header  {display: flex;
+    margin: 0;
+    padding-right: 100px;
+    padding-left: 100px;
+    width: 1000px;
+    height: 150px;
+    justify-content: space-between;
+}
+.nav-list{
+    display: flex; 
+    justify-content: space-between;
+    width: 300px;
+    height: 150px;
+    
+     
+}
+.list-item{
+    width: 70px;
+    height: 100px;
+    padding: 0;  
+    margin: 5px;
+}
+.list-item:first-child:hover {
+    background: red;
+    color: white;
+    margin-top: 
+}
+.logo{
+    width: 300px;
+    height: 150px;    
+}
+
+
+
+
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+}
+.holder {
+    margin: 15px;
+    padding: 10px;
+    width: 25%;
+    height: 150px;
+    border: 1px solid red;
+}
+.inner {
+    width: 100%;
+    height: 100%;
+    border: 1px solid green;
+}
+
+
+/*
+
+background color
+::hover
+color: red
 */
 
 /***LANDSCAPE-MOBILE***/
