--- a/css/styles.css
+++ b/css/styles.css
@@ -23,28 +23,43 @@ textarea {
     margin: 0;
     padding-right: 100px;
     padding-left: 100px;
-    width: 1000px;
+    width: 100%;
     height: 150px;
     justify-content: space-between;
 }
 .nav-list{
     display: flex; 
     justify-content: space-between;
-    width: 300px;
-    height: 150px;
+    height: 75px;
     
      
 }
 .list-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center; 
     width: 70px;
-    height: 100px;
-    padding: 0;  
+    padding: 5px;  
     margin: 5px;
 }
-.list-item:first-child:hover {
+.list-item:not(:last-child) {
+    margin-right: 10px;
+}
+.list-item:hover {
     background: red;
-    color: white;
+    color: black;
     margin-top: 
+}
+.list-item.active {
+    background-color: #d45e5e;
+}
+.list-item.active .item-link {
+    color: white;
+}
+.item-link {
+    font-size: 13px;
+    text-transform: uppercase;
 }
 .logo{
     width: 300px;
