--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ textarea {
 
 
 
-
+/*
 section {
     display: flex;
     flex-wrap: wrap;
@@ -85,6 +85,56 @@ section {
     width: 100%;
     height: 100%;
     border: 1px solid green;
+}*/
+.visually-hidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    margin: -1px;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+}
+.skills-list {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+  }
+  
+    
+  .level {
+    margin: 4px;
+    padding: 0;
+    height: 7px;
+    background-color: #fea18d;
+  }
+  .level div {
+    margin: 0px;
+    height: 7px;
+    background-color: black; 
+  }
+.page-footer{display:flex;
+    margin: 0;
+    padding-right: 100px;
+    padding-left: 100px;
+    background-color: #d45e5e;
+    color: white;
+    width: 100%;
+    height: 300px;
+}
+.copyright{display: flex;
+    flex direction: row;
+    justify-content: flex-end;
+    margin: 0;
+    padding-right: 100px;
+    padding-left: 100px;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 50px;
 }
 
 
